css/lackstein.scss
---
---
html, body {
  height: 100%;
}

body {
  overflow-y: scroll;
}

#site {
  height: 100%;
  margin-bottom: 0px;
  background-color: #eeeeee;
}

#sidebar {
  @media only screen and (min-width: 993px) {
    height: 100%;
    position: fixed;
    z-index: 998;
  }
  color: #fff;
  background-color: #455a64;
  
  #sidebar-content {
    @media only screen and (min-width: 993px) {
      padding-top: 50px;
    }
  }
  
  #sidebar-links {
    width: 100%;
  }
  
  .sidebar-col {
    width: 25%;
    margin-left: 0;
    
    @media only screen and (min-width: 993px) {
      width: 100%;
    }
  }
}

.list-post-image {
  width: 100%;
  height: 250px;
  
  @media only screen and (max-width : 992px) {
    display: none !important;
  }
  
  + span {
    color: #fff !important;
  }
}

@import "syntax-highlighting";

